# ai_guide

./: .gitignore  pyproject.toml
src/ai_guide/: cross_transformer.py  datasets.py  detect_path_predictor.py  detect_path_predictor_ex.py  foreground_extractor.py  hierachical_predictor.py  model_utils.py  models.py  path_utils.py  pcd_utils.py  predictor.py  registration.py  segment_path_predictor.py  segmentation.py  simple_transformer.py  surface.py  trainer.py  trainer_pt.py
src/ai_guide/datasets/: __init__.py  ex.py  match.py  pt.py
src/ai_guide/models/: common.py  ex.py  match.py  pt.py
src/ai_guide/scripts/: predict_edge.py  predict_index.py  run_pcd_registration.py
src/ai_guide/trainers/: match.py  trainer.py  trainer_pt.py
src/tests/: test_segmentation.py  test_surface.py
