[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_guide"
version = "0.1.0"
description = "ai guidence library for 3d vision"
authors = [
    { name = "Xiaochuan Zou", email = "zouxiaochuan@163.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "open3d"
]
requires-python = ">=3.6"

[tool.setuptools]
packages = ["ai_guide"]

[tool.setuptools.package-dir]
ai_guide = "src/ai_guide"