[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_guide"
version = "0.1.0"
description = "ai guidence library for 3d vision"
authors = [
    { name = "Xiaochuan Zou", email = "zouxiaochuan@163.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "open3d",
    "fpsample",
    "ultralytics",
]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_guide*"]
exclude = ["tests"]
